--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": ".",
+	"homepage": "https://nikolamc.github.io/Genshin-Calculators-React",
 	"name": "primo-calc-react",
 	"version": "0.1.0",
 	"private": true,
@@ -9,11 +9,12 @@
 		"@testing-library/user-event": "^12.8.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.2.2",
 		"react-scripts": "4.0.3",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -36,5 +37,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^3.2.3"
 	}
 }
